Update models at UserService
