# src/app/data/api/user-service/models/operation-result-response-credentials-response.ts
@@ -1,0 +1,13 @@
+/* tslint:disable */
+/* eslint-disable */
+import { OperationResultStatusType } from './operation-result-status-type';
+
+/**
+ * Response object for action operations.
+ */
+export interface OperationResultResponseCredentialsResponse {
+  body?: { 'UserId'?: string, 'AccessToken'?: string, 'RefreshToken'?: string, 'accessTokenExpiresIn'?: number, 'refreshTokenExpiresIn'?: number };
+  errors?: Array<string>;
+  status?: OperationResultStatusType;
+}
+
