# src/app/data/api/user-service/services/credentials-api.service.ts
@@ -11,9 +11,8 @@ import { map, filter } from 'rxjs/operators';
 
 import { ChangePasswordRequest } from '../models/change-password-request';
 import { CreateCredentialsRequest } from '../models/create-credentials-request';
-import { CredentialsResponse } from '../models/credentials-response';
 import { OperationResultResponse } from '../models/operation-result-response';
-import { OperationResultStatusType } from '../models/operation-result-status-type';
+import { OperationResultResponseCredentialsResponse } from '../models/operation-result-response-credentials-response';
 
 @Injectable({
   providedIn: 'root',
@@ -41,7 +40,7 @@ export class CredentialsApiService extends BaseService {
    */
   createCredentials$Response(params?: {
     body?: CreateCredentialsRequest
-  }): Observable<StrictHttpResponse<{ 'OperationResultResponse'?: { 'Body'?: CredentialsResponse, 'Status'?: OperationResultStatusType, 'Errors'?: Array<string> } }>> {
+  }): Observable<StrictHttpResponse<OperationResultResponseCredentialsResponse>> {
 
     const rb = new RequestBuilder(this.rootUrl, CredentialsApiService.CreateCredentialsPath, 'post');
     if (params) {
@@ -54,7 +53,7 @@ export class CredentialsApiService extends BaseService {
     })).pipe(
       filter((r: any) => r instanceof HttpResponse),
       map((r: HttpResponse<any>) => {
-        return r as StrictHttpResponse<{ 'OperationResultResponse'?: { 'Body'?: CredentialsResponse, 'Status'?: OperationResultStatusType, 'Errors'?: Array<string> } }>;
+        return r as StrictHttpResponse<OperationResultResponseCredentialsResponse>;
       })
     );
   }
@@ -69,10 +68,10 @@ export class CredentialsApiService extends BaseService {
    */
   createCredentials(params?: {
     body?: CreateCredentialsRequest
-  }): Observable<{ 'OperationResultResponse'?: { 'Body'?: CredentialsResponse, 'Status'?: OperationResultStatusType, 'Errors'?: Array<string> } }> {
+  }): Observable<OperationResultResponseCredentialsResponse> {
 
     return this.createCredentials$Response(params).pipe(
-      map((r: StrictHttpResponse<{ 'OperationResultResponse'?: { 'Body'?: CredentialsResponse, 'Status'?: OperationResultStatusType, 'Errors'?: Array<string> } }>) => r.body as { 'OperationResultResponse'?: { 'Body'?: CredentialsResponse, 'Status'?: OperationResultStatusType, 'Errors'?: Array<string> } })
+      map((r: StrictHttpResponse<OperationResultResponseCredentialsResponse>) => r.body as OperationResultResponseCredentialsResponse)
     );
   }
 
